# SPARC

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
docs/: Parameters.md  parameter_organization.md
docs/theory/: ignition_theory.md  material_theory.md  mechanics_theory.md  wire_theory.md
examples/: dashboard_demo.py  organized_parameter_example.py  quickstart.py  visualization_example.py
experiments/: run_simulation.py  single_spark_animation.py
src/wedm/: __init__.py
src/wedm/core/: __init__.py  env_config.py  material_db.py  state.py
src/wedm/data/: wire_materials.json
src/wedm/envs/: wire_edm.py
src/wedm/modules/: __init__.py  dielectric.py  ignition.py  material.py  mechanics.py  wire.py
src/wedm/utils/: logger.py
tests/: test_env_integration.py  test_state.py
visualization/: README.md  dashboard.html  dashboard.js
